# dragon_kernel_google_zuma-PWMMod-Nethunter

./: .gitmodules  BUILD.bazel  Kbuild  Kconfig  Makefile  auth-control.c  auth-control.h  auth13.c  auth13.h  auth22.c  auth22.h  bcm_gps_spi.c  bigo.c  bigo_debug.c  bigo_debug.h  bigo_io.h  bigo_iommu.c  bigo_of.c  bigo_pm.c  bigo_priv.h  bigo_slc.h  callisto-platform.c  dpcd.c  dpcd.h  exynos-hdcp-interface.h  exynos-hdcp1-auth.c  exynos-hdcp1-auth.h  exynos-hdcp2-dplink-auth.c  exynos-hdcp2-dplink-if.c  exynos-hdcp2-dplink-if.h  exynos-hdcp2-dplink-inter.c  exynos-hdcp2-dplink-inter.h  exynos-hdcp2-dplink-protocol-msg.c  exynos-hdcp2-dplink-reg.h  exynos-hdcp2-dplink-selftest.c  exynos-hdcp2-dplink.c  exynos-hdcp2-dplink.h  exynos-hdcp2-encrypt.c  exynos-hdcp2-encrypt.h  exynos-hdcp2-log.h  (+84 more)
arch/arm64/: Kconfig  Makefile
arch/arm64/configs/: zuma_defconfig
arch/arm64/kernel/: cpufeature.c  proton-pack.c
block/: Makefile  ssg-iosched.c
callisto/: config-pwr-state.h
drivers/android/: binder.c  vendor_hooks.c
drivers/cpuidle/governors/: teo.c
drivers/devfreq/: tensor_aio.c
drivers/edgetpu/: edgetpu-device-group.c  edgetpu-google-iommu.c  edgetpu-kci.c  mobile-soc-gsx01.c  rio-pm.c
drivers/input/: input.c
drivers/ufs/core/: ufshcd.c
ese/: st33spi.c  st54spi.c
fs/: Makefile  dcache.c  exec.c  namei.c  namespace.c  open.c  proc_namespace.c  read_write.c  readdir.c  stat.c  susfs.c
fs/f2fs/: super.c
fs/proc/: base.c  bootconfig.c  task_mmu.c
fst2/: Makefile  fts.c
ftm5/: BUILD.bazel  Kbuild  fts.c
gcip-kernel-driver/drivers/gcip/: gcip-thermal.c
gcip-kernel-driver/include/gcip/: gcip-iommu.h
google-devices/: Kconfig  Kconfig.ext  Makefile
google-devices/shusky/: BUILD.bazel  Kconfig.ext.shusky
google-devices/shusky/display/: panel-google-bigsurf.c  panel-google-shoreline.c
google-devices/zuma/dts/: Makefile  zuma.dtsi
google-modules/: Makefile
google-modules/amplifiers/cs40l26/: cs40l26.c
google-modules/aoc/alsa/: Kbuild  aoc_alsa_hw.c
google-modules/bms/: google_battery.c  google_charger.c  google_cpm.c  google_ttf.c  p9221_charger.c  p9221_charger.h
google-modules/display/samsung/: Kbuild  exynos_drm_decon.c  exynos_drm_dsim.c
google-modules/gpu/mali_kbase/: Makefile
google-modules/gxp/zuma/: BUILD.bazel  Makefile  gxp-common-platform.c  gxp-debug-dump.c  gxp-debug-dump.h  gxp-dma-iommu.c  gxp-dma.h  gxp-kci.c  gxp-lpm.c  gxp-mcu-platform.c  gxp-mcu-telemetry.c  gxp-mcu.c  gxp-mcu.h  gxp-uci.c  gxp-vd.c
google-modules/lwis/: lwis_buffer.c  lwis_bus_manager.c  lwis_device_top.c  lwis_dt.c  lwis_i2c.c
google-modules/power/mitigation/: google_bcl_core.c  google_bcl_sysfs.c  max77759_vdroop.c
google-modules/soc/gs/: Kconfig.ext_modules
google-modules/touch/common/: goog_touch_interface.c
google-modules/wlan/bcm4398/: Kbuild  dhd_common.c  dhd_linux.c  dhd_linux_exportfs.c  dhd_pcie.c  dhd_pcie_linux.c  nciutils.c  wl_android.c  wl_cfg80211.c  wl_cfg80211.h  wl_cfg_cellavoid.c  wl_cfgvendor.c
gs_drm/: BUILD.bazel  Kbuild  Makefile  gs_drm_connector.c
gs_panel/: BUILD.bazel  Kbuild  Makefile  drm_bridge_funcs.c  drm_panel_funcs_defaults.c  gs_dsi_dcs_helper.c  gs_panel.c  gs_panel_connector_funcs.c  gs_panel_debugfs.c  gs_panel_funcs_defaults.c  gs_panel_internal.h  gs_panel_lhbm.c  gs_panel_sysfs.c  gs_panel_test.c  gs_panel_trace.c
gs_panel/Documentation/ABI/testing/: sysfs-devices-platform-gs-drm-connector-panel
include/: BUILD.bazel
include/gs_drm/: gs_display_mode.h  gs_drm_connector.h
include/gs_panel/: dcs_helper.h  gs_panel.h  gs_panel_funcs_defaults.h  gs_panel_test.h
include/linux/: mm.h  mount.h  sched.h  susfs.h
include/linux/sched/: user.h
include/trace/: panel_trace.h
include/trace/hooks/: sched.h
include/ufs/: ufshcd.h
init/: Kconfig
kernel/: exit.c  kallsyms.c  module.c  smp.c  sys.c
kernel/bpf/: core.c  syscall.c
kernel/irq/: irqdesc.c  manage.c
kernel/printk/: printk.c
kernel/sched/: core.c  cpufreq_schedutil.c  fair.c  vendor_hooks.c
kernel/time/: hrtimer.c
lib/: Kconfig.debug
mm/: page_alloc.c  vmscan.c
net/mac80211/: tx.c
net/unix/: af_unix.c
panel_tests/: BUILD.bazel
panels/: BUILD.bazel  Kbuild  Makefile  panel-gs-simple.c
platform/anchorage/: lwis_platform_anchorage.c
platform/busan/: lwis_platform_busan.c
platform/casablanca/: lwis_platform_casablanca.c
qm35/: qm35-spi.c
scripts/: Makefile.lib  link-vmlinux.sh
usi/: goog_usi_stylus.c  goog_usi_stylus.h
(+31 files in other folders)
