# SPDX-License-Identifier: MIT

filegroup(
    name = "headers",
    srcs = glob([
        "include/**/*.h",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display:__subpackages__",
        "//private/google-modules/touch:__subpackages__",
    ],
)

filegroup(
    name = "common.kconfig",
    srcs = glob([
        "Kconfig",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)
