# SPDX-License-Identifier: MIT

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "connector",
    srcs = glob([
        "*.c",
        "Kbuild",
    ]) + [
        "//private/google-modules/display/common:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "gs-drm-connector.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
